==ARL Change Log
NOTE: Always remove the folder for old versions and install a fresh copy when upgrading.

== Under Development

==== Backend:
* Reverted switch to AceLocale 3.1

== Version 2.2.2 Release

==== Recipe Database:
* Updated quests for recipes.
* Added new JC recipe: Reckless Hessonite

==== Backend:
* Switched to AceLocale 3.1

== Version 2.2.1 Release

==== Recipe Database:
* Properly detect the new Cooking recipe: Feathered Lure

== Version 2.2.0 Release

==== Recipe Database:
* 4.0.6 recipes have been added:
** Cooking - Feathered Lure
** Cooking - Scalding Murglesnout
** JC - Vivid Dream Emerald
** JC - Agile Shadowspirit Diamond
** JC - Burning Shadowspirit Diamond
** JC - Reverberating Shadowspirit Diamond
** Alchemy - Quicksilver, Vibrant and Volatile Alchemist Stones
** Enchanting - Enchant Bracer: Agility, Major Strength and Mighty Intellect
** Inscription - Glyph of Dark Succor
* First aid trainers have been updated.  Most of the recipes are availible from all 33 trainers except a few cataclysm which are only availible from 31 trainers.  I think this is a bug so there may be two erroneous trainers for a few first aid recipes.
* A bunch of jewelcrafting recipes have had the items they craft linked to them.
* Added new API functions for custom strings and seasonal recipes.  Updated API documentation.

==== New Features:
* A new slash command has been added: /arl scan <profession>  This will scan the profession from a slash command, without requiring you to open up the tradeskill window yourself.  Due to limitations, this will basically fire off the tradeskill for you so that window will open up. (Ticket 1145)

==== Bug Fixes:
* We didn't account for the Has Skill up filter.  Now we do.
* Filters should properly reset after we muck with them during a scan. (Ticket 1161)
* Don't show rank 1 recipes when you know rank 2 recipes. (Ticket 1147)
* Scan button will no longer be hidden when you have Broker Profession_Menu installed. (Ticket 1170)