@@ -1,6 +1,6 @@
 --[[
 ************************************************************************
-testenUS.lua
+devel-enUS.lua
 These are localization strings used for the testing of ARL.
 Manually add entries here and then proceed to update the localization
 application located here:
@@ -581,6 +581,7 @@ L["Argent Quartermaster Hasana"] = true
 L["Argent Quartermaster Lightspark"] = true
 L["Argo Strongstout"] = true
 L["Aristaleon Sunweaver"] = true
+L["Arkkoran Oracle"] = true
 L["Arnok"] = true
 L["Arras"] = true
 L["Arred"] = true
@@ -626,6 +627,7 @@ L["Bombus Finespindle"] = true
 L["Bonechewer Backbreaker"] = true
 L["Booker Kells"] = true
 L["Borgosh Corebender"] = true
+L["Borgus Steelhand"] = true
 L["Borto"] = true
 L["Borus Ironbender"] = true
 L["Borya"] = true
@@ -673,6 +675,7 @@ L["Chief Engineer Leveny"] = true
 L["Christoph Jeffcoat"] = true
 L["Cielstrasza"] = true
 L["Clarise Gnarltree"] = true
+L["Cliff Breaker"] = true
 L["Cloned Ooze"] = true
 L["Clyde Ranthal"] = true
 L["Coilfang Oracle"] = true
@@ -720,6 +723,7 @@ L["Dark Iron Slaver"] = true
 L["Dark Iron Taskmaster"] = true
 L["Dark Iron Tunneler"] = true
 L["Dark Iron Watchman"] = true
+L["Dark Strand Voidcaller"] = true
 L["Darkmoon Faire"] = true
 L["Darmari"] = true
 L["Darnall"] = true
@@ -735,8 +739,10 @@ L["Deathforge Smith"] = true
 L["Deathforge Tinkerer"] = true
 L["Decaying Horror"] = true
 L["Deek Fizzlebizz"] = true
+L["Defias Enchanter"] = true
 L["Defias Looter"] = true
 L["Defias Pirate"] = true
+L["Defias Renegade Mage"] = true
 L["Defias Squallshaper"] = true
 L["Delfrum Flintbeard"] = true
 L["Deneb Walker"] = true
@@ -894,11 +900,13 @@ L["Harklan Moongrove"] = true
 L["Harlown Darkweave"] = true
 L["Harn Longcast"] = true
 L["Haughty Modiste"] = true
+L["Heldan Galesong"] = true
 L["Helenia Olden"] = true
 L["Hgarth"] = true
 L["High Admiral \"Shelly\" Jorrik"] = true
 L["High Enchanter Bardolan"] = true
 L["Highlord Darion Mograine"] = true
+L["Hillsbrad Tailor"] = true
 L["Himmik"] = true
 L["Hiwahi Three-Feathers"] = true
 L["Hotoppik Copperpinch"] = true
@@ -921,6 +929,7 @@ L["Ironus Coldsteel"] = true
 L["Ironwool Mammoth"] = true
 L["Isabel Jones"] = true
 L["Jack Trapper"] = true
+L["Jadefire Rogue"] = true
 L["Jalane Ayrole"] = true
 L["James Van Brunt"] = true
 L["Jamesina Watterly"] = true
@@ -1016,6 +1025,7 @@ L["Lardan"] = true
 L["Lavinia Crowe"] = true
 L["Lebowski"] = true
 L["Leeli Longhaggle"] = true
+L["Legashi Rogue"] = true
 L["Leo Sarn"] = true
 L["Leonard Porter"] = true
 L["Librarian Erickson"] = true
@@ -1166,6 +1176,7 @@ L["Phantom Valet"] = true
 L["Phea"] = true
 L["Pikkle"] = true
 L["Plains Mammoth"] = true
+L["Portal Seeker"] = true
 L["Poshken Hardbinder"] = true
 L["Pratt McGrubben"] = true
 L["Primal Ooze"] = true
@@ -1263,6 +1274,7 @@ L["Slavering Ghoul"] = true
 L["Smiles O'Byron"] = true
 L["Smith Argus"] = true
 L["Smudge Thunderwood"] = true
+L["Son of Arkkoroc"] = true
 L["Soolie Berryfizz"] = true
 L["Sovik"] = true
 L["Spectral Researcher"] = true
